Event results done

--- a/software/website/index.html
+++ b/software/website/index.html
@@ -140,15 +140,23 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Build a website
-                        <strong>worth visiting</strong>
+                    <h2 class="intro-text text-center">
+                        <strong>Dataset++ information</strong>
                     </h2>
                     <hr>
                     <img class="img-responsive img-border img-left" src="img/intro-pic.jpg" alt="">
                     <hr class="visible-xs">
-                    <p>The boxes used in this template are nested inbetween a normal Bootstrap row and the start of your column layout. The boxes will be full-width boxes, so if you want to make them smaller then you will need to customize.</p>
-                    <p>A huge thanks to <a href="http://join.deathtothestockphoto.com/" target="_blank">Death to the Stock Photo</a> for allowing us to use the beautiful photos that make this template really come to life. When using this template, make sure your photos are decent. Also make sure that the file size on your photos is kept to a minumum to keep load times to a minimum.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    <p>This dataset was collected from the Twitter streaming API using tweepy. The stream was filtered
+                    using the keyword "trump". Event: A combination of approaches was used for event detection.
+                        Terms were considered as living organisms, allowing us to sample a set of tweets when each term
+                        was "most alive", while combining user reputation to select a tweet from a reputable source.
+                        ++ info gia sentiment kai geo</p>
+                    <ul>
+                        <li>Keyword filter : trump</li>
+                        <li>Total number of tweets : 377606</li>
+                        <li>Apo pote mexri pote</li>
+                        <li>++?</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -163,6 +171,13 @@
                     <hr>
                     <div id="plot1"></div>
                 </div>
+                <div class="col-lg-3"></div>
+                <div class="col-lg-6">
+                    <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">President Trump announced that he will withdraw the United States from participation in the Paris climate accord <a href="https://t.co/SH3iThYXPR">https://t.co/SH3iThYXPR</a></p>&mdash; The New York Times (@nytimes) <a href="https://twitter.com/nytimes/status/870363574782361600">June 1, 2017</a></blockquote>
+                    <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+                </div>
+                <div class="col-lg-3"></div>
+
             </div>
         </div>
         <div class="row">
@@ -174,6 +189,12 @@
                     </h2>
                     <hr>
                     <div id="plot2"></div>
+                    <div class="col-lg-3"></div>
+                    <div class="col-lg-6">
+                        <blockquote class="twitter-tweet" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">Twitter is still trying to figure out what <a href="https://twitter.com/hashtag/Covfefe?src=hash">#Covfefe</a> means, thanks to Donald Trump <a href="https://t.co/0Reu3vqn2Z">https://t.co/0Reu3vqn2Z</a></p>&mdash; TIMES NOW (@TimesNow) <a href="https://twitter.com/TimesNow/status/869850224860184576">May 31, 2017</a></blockquote>
+                        <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    </div>
+                    <div class="col-lg-3"></div>
                 </div>
             </div>
         </div>
@@ -186,6 +207,12 @@
                     </h2>
                     <hr>
                     <div id="plot3"></div>
+                    <div class="col-lg-3"></div>
+                    <div class="col-lg-6">
+                        <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr"><a href="https://twitter.com/DavidCornDC">@DavidCornDC</a> shows how Trump took himself from an unwitting asset to a witting accomplice in <a href="https://twitter.com/hashtag/Trumprussia?src=hash">#Trumprussia</a>  <a href="https://t.co/ouNtD1LZxY">https://t.co/ouNtD1LZxY</a></p>&mdash; Malcolm Nance (@MalcolmNance) <a href="https://twitter.com/MalcolmNance/status/869571887419932672">May 30, 2017</a></blockquote>
+                        <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    </div>
+                    <div class="col-lg-3"></div>
                 </div>
             </div>
         </div>
@@ -198,6 +225,12 @@
                     </h2>
                     <hr>
                     <div id="plot4"></div>
+                    <div class="col-lg-3"></div>
+                    <div class="col-lg-6">
+                        <blockquote class="twitter-tweet" data-lang="en"><p lang="und" dir="ltr"><a href="https://t.co/KCQ77SMmNQ">https://t.co/KCQ77SMmNQ</a></p>&mdash; Debra Messing (@DebraMessing) <a href="https://twitter.com/DebraMessing/status/869613580198522880">May 30, 2017</a></blockquote>
+                        <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    </div>
+                    <div class="col-lg-3"></div>
                 </div>
             </div>
         </div>
