--- a/software/website/about.html
+++ b/software/website/about.html
@@ -98,7 +98,7 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Our
+                    <h2 class="intro-text text-center">The
                         <strong>Team</strong>
                     </h2>
                     <hr>
@@ -130,7 +130,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>csd.auth.gr</p>
                 </div>
             </div>
         </div>
