--- a/software/website/index.html
+++ b/software/website/index.html
@@ -49,8 +49,8 @@
 
 <body>
 
-    <div class="brand">Business Casualz</div>
-    <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+    <div class="brand">Twitter topic detection and analysis</div>
+    <div class="address-bar">Perigrafi me 10lekseis tou ti kanoume</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -92,71 +92,49 @@
 
         <div class="row">
             <div class="box">
-                <div class="col-lg-12 text-center">
-                    <div id="carousel-example-generic" class="carousel slide">
-                        <!-- Indicators -->
-                        <ol class="carousel-indicators hidden-xs">
-                            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                        </ol>
-
-                        <!-- Wrapper for slides -->
-                        <div class="carousel-inner">
-                            <div class="item active">
-                                <img class="img-responsive img-full" src="img/slide-1.jpg" alt="">
-                            </div>
-                            <div class="item">
-                                <img class="img-responsive img-full" src="img/slide-2.jpg" alt="">
-                            </div>
-                            <div class="item">
-                                <img class="img-responsive img-full" src="img/slide-3.jpg" alt="">
-                            </div>
-                        </div>
-
-                        <!-- Controls -->
-                        <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                            <span class="icon-prev"></span>
-                        </a>
-                        <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                            <span class="icon-next"></span>
-                        </a>
+                <div class="col-lg-12" style="text-align: center">
+                    <hr>
+                    <h2 class="intro-text text-center">
+                        <strong>Dataset and tools</strong>
+                    </h2>
+                    <hr>
+                    <!--<img class="img-responsive img-border img-left" src="img/intro-pic.jpg" alt="">-->
+                    <hr class="visible-xs">
+                    <p>This dataset was collected from the Twitter streaming API using <a href="http://www.tweepy.org/">tweepy</a>.</p>
+                    <div class="col-lg-1"></div>
+                    <div class="col-lg-10">
+                        <ul class="list-group">
+                            <li class="list-group-item">Keyword filter: trump</li>
+                            <li class="list-group-item">Total number of tweets : 377606</li>
+                            <li class="list-group-item">Dates: 3 days</li>
+                            <li class="list-group-item"><a href="ftp://snf-755277.vm.okeanos.grnet.gr/pub/">Link to datasets</a></li>
+                            <li class="list-group-item"><a href="https://github.com/alextsil/twitter-topic-detection-and-analysis">Link to Github repository</a></li>
+                        </ul>
                     </div>
-                    <h2 class="brand-before">
-                        <small>Welcome to</small>
-                    </h2>
-                    <h1 class="brand-name">Business Casual</h1>
-                    <hr class="tagline-divider">
-                    <h2>
-                        <small>By
-                            <strong>Start Bootstrap</strong>
-                        </small>
-                    </h2>
+                    <div class="col-lg-1"></div>
                 </div>
             </div>
         </div>
 
         <div class="row">
             <div class="box">
-                <div class="col-lg-12">
+                <div class="col-lg-12" style="text-align: center">
                     <hr>
                     <h2 class="intro-text text-center">
-                        <strong>Dataset++ information</strong>
+                        <strong>Tasks & Techniques</strong>
                     </h2>
                     <hr>
-                    <img class="img-responsive img-border img-left" src="img/intro-pic.jpg" alt="">
+                    <!--<img class="img-responsive img-border img-left" src="img/intro-pic.jpg" alt="">-->
                     <hr class="visible-xs">
-                    <p>This dataset was collected from the Twitter streaming API using tweepy. The stream was filtered
-                    using the keyword "trump". Event: A combination of approaches was used for event detection.
+                    <p><span class="label label-default">Event detection:</span> A combination of approaches was used for event detection.
                         Terms were considered as living organisms, allowing us to sample a set of tweets when each term
-                        was "most alive", while combining user reputation to select a tweet from a reputable source.
-                        ++ info gia sentiment kai geo</p>
-                    <ul>
-                        <li>Keyword filter : trump</li>
-                        <li>Total number of tweets : 377606</li>
-                        <li>Apo pote mexri pote</li>
-                        <li>++?</li>
-                    </ul>
+                        was "most alive", while combining user reputation metrics to select a tweet from a reputable source.</p>
+                    <p><span class="label label-default">Sentiment analysis:</span> A combination of approaches was used for event detection.
+                        Terms were considered as living organisms, allowing us to sample a set of tweets when each term
+                        was "most alive", while combining user reputation metrics to select a tweet from a reputable source.</p>
+                    <p><span class="label label-default">Geolocation:</span> A combination of approaches was used for event detection.
+                        Terms were considered as living organisms, allowing us to sample a set of tweets when each term
+                        was "most alive", while combining user reputation metrics to select a tweet from a reputable source.</p>
                 </div>
             </div>
         </div>
