final text change sto event detection

--- a/software/website/index.html
+++ b/software/website/index.html
@@ -126,9 +126,12 @@
                     <hr>
                     <!--<img class="img-responsive img-border img-left" src="img/intro-pic.jpg" alt="">-->
                     <hr class="visible-xs">
-                    <p><span class="label label-default">Event detection:</span> A combination of approaches was used for event detection.
-                        Terms were considered as living organisms, allowing us to sample a set of tweets when each term
-                        was "most alive", while combining user reputation metrics to select a tweet from a reputable source.</p>
+                    <p><span class="label label-default">Event detection:</span>
+                        The top 4 ranked hashtags, their occurrences and the tweet that qualified as an event by our system will be presented.
+                        A combination of approaches was used for event detection:
+                        Terms were considered as living organisms, allowing us to sample a set of tweets as when each term
+                        was "most alive", while combining user reputation metrics to select a tweet from a reputable source.
+                    </p>
                     <p><span class="label label-default">Sentiment analysis:</span> A combination of approaches was used for event detection.
                         Terms were considered as living organisms, allowing us to sample a set of tweets when each term
                         was "most alive", while combining user reputation metrics to select a tweet from a reputable source.</p>
