--- a/software/website/index.html
+++ b/software/website/index.html
@@ -135,9 +135,9 @@
                     <p><span class="label label-default">Sentiment analysis:</span> A combination of approaches was used for event detection.
                         Terms were considered as living organisms, allowing us to sample a set of tweets when each term
                         was "most alive", while combining user reputation metrics to select a tweet from a reputable source.</p>
-                    <p><span class="label label-default">Geolocation:</span> A combination of approaches was used for event detection.
-                        Terms were considered as living organisms, allowing us to sample a set of tweets when each term
-                        was "most alive", while combining user reputation metrics to select a tweet from a reputable source.</p>
+                    <p><span class="label label-default">Geolocation:</span> For every city in our training corpus, we compute the frequency 
+                     of its occurrences in user’s tweets and use this as the matching score of that user with that city. The city
+                     with the highest matching score is predicted as the location classification for that user.</p>
                 </div>
             </div>
         </div>
