--- a/software/website/index.html
+++ b/software/website/index.html
@@ -215,6 +215,23 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">
+                        <strong>Sentiment polarity results for #parisagreement</strong>
+                    </h2>
+                    <hr>
+                    <div id="plot5"></div>
+                    <div class="col-lg-3"></div>
+                    <div class="col-lg-6">
+                        <img src="img/pie_chart.png" alt="Polarity Percentages" style="width:600px;height:400px;">
+                    </div>
+                    <div class="col-lg-3"></div>
+                </div>
+            </div>
+        </div>
         <!--plots end-->
     </div>
 
