--- a/software/website/index.html
+++ b/software/website/index.html
@@ -222,6 +222,8 @@
                     <h2 class="intro-text text-center">
                         <strong>Sentiment polarity results for #parisagreement</strong>
                     </h2>
+                    <br><center>Total number of tweets related to #parisagreement : 2684
+                    </center>
                     <hr>
                     <div id="plot5"></div>
                     <div class="col-lg-3"></div>
