--- a/software/website/about.html
+++ b/software/website/about.html
@@ -108,10 +108,8 @@
                     <h3>Alex Tsilingiris</h3>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
-                        <small>Job Title</small>
-                    </h3>
+                    <img class="img-responsive" src="img/zoidberg.png" alt="">
+                    <h3>Christina Pardalidou</h3>
                 </div>
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
