--- a/software/website/index.html
+++ b/software/website/index.html
@@ -109,6 +109,8 @@
                             <li class="list-group-item">Dates: 3 days</li>
                             <li class="list-group-item"><a href="ftp://snf-755277.vm.okeanos.grnet.gr/pub/">Link to datasets</a></li>
                             <li class="list-group-item"><a href="https://github.com/alextsil/twitter-topic-detection-and-analysis">Link to Github repository</a></li>
+                            <li class="list-group-item"><a href="https://github.com/lefterisKl/Opinion-Mining">Opinion-Mining Tool: Github repository</a></li>
+                            
                         </ul>
                     </div>
                     <div class="col-lg-1"></div>
@@ -132,7 +134,7 @@
                         Terms were considered as living organisms, allowing us to sample a set of tweets as when each term
                         was "most alive", while combining user reputation metrics to select a tweet from a reputable source.
                     </p>
-                    <p><span class="label label-default">Sentiment analysis:</span> A tool implemented for the needs of a previous course was used to predict the polarity of
+                    <p><span class="label label-default">Sentiment analysis:</span> An Opinion-Mining tool implemented for the needs of a previous course was used to predict the polarity of
                     the tweets related to the emerging event. An SVM classifier was trained with 25k labeled movie reviews, from the publicly known labeled dataset of imdb, in order to predict 
                     the polarity of the unlabeled dataset of the collected tweets.</p>
                     <p><span class="label label-default">Geolocation:</span> For every city in our training corpus, we computed the frequency 
