--- a/software/website/index.html
+++ b/software/website/index.html
@@ -236,6 +236,51 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">
+                        <strong>Most frequent locations</strong>
+                    </h2>
+                    <hr>
+                    <div class="col-lg-3" style="display:table-cell; vertical-align:middle; text-align:center"><img src="img/toplocations.png"></div>
+                    <div class="col-lg-6">
+                    </div>
+                    <div class="col-lg-3"></div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">
+                        <strong>Top 20 selected cities</strong>
+                    </h2>
+                    <hr>
+                    <div class="col-lg-3" style="display:table-cell; vertical-align:middle; text-align:center"><img src="img/top20cities.png"></div>
+                    <div class="col-lg-6">
+                    </div>
+                    <div class="col-lg-3"></div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">
+                        <strong>Accuracies of experiments</strong>
+                    </h2>
+                    <hr>
+                    <div class="col-lg-3" style="display:table-cell; vertical-align:middle; text-align:center"><img src="img/accuracies.png"></div>
+                    <div class="col-lg-6" >
+                    </div>
+                    <div class="col-lg-3"></div>
+                </div>
+            </div>
+        </div>
         <!--plots end-->
     </div>
 
