--- a/software/website/index.html
+++ b/software/website/index.html
@@ -244,7 +244,7 @@
                         <strong>Most frequent locations</strong>
                     </h2>
                     <hr>
-                    <div class="col-lg-3" style="display:table-cell; vertical-align:middle; text-align:center"><img src="img/toplocations.png"></div>
+                    <div class="col-lg-3"><img src="img/toplocations.png" style="margin-left: 60%"></div>
                     <div class="col-lg-6">
                     </div>
                     <div class="col-lg-3"></div>
@@ -259,8 +259,9 @@
                         <strong>Top 20 selected cities</strong>
                     </h2>
                     <hr>
-                    <div class="col-lg-3" style="display:table-cell; vertical-align:middle; text-align:center"><img src="img/top20cities.png"></div>
+                    <div class="col-lg-3"><img src="img/top20cities.png" style="margin-left: 60%"></div>
                     <div class="col-lg-6">
+                        
                     </div>
                     <div class="col-lg-3"></div>
                 </div>
@@ -274,8 +275,9 @@
                         <strong>Accuracies of experiments</strong>
                     </h2>
                     <hr>
-                    <div class="col-lg-3" style="display:table-cell; vertical-align:middle; text-align:center"><img src="img/accuracies.png"></div>
+                    <div class="col-lg-3"><img src="img/accuracies.png" style="margin-left: 60%"></div>
                     <div class="col-lg-6" >
+                        
                     </div>
                     <div class="col-lg-3"></div>
                 </div>
