--- a/software/website/index.html
+++ b/software/website/index.html
@@ -44,7 +44,6 @@
         parse("plots/marchfortruth.json", "plot4");
     </script>
 
-    <!--Plotting libs end-->
 </head>
 
 <body>
@@ -152,7 +151,9 @@
                         <strong>#parisagreement</strong>
                     </h2>
                     <hr>
-                    <div id="plot1"></div>
+                    <div class="col-lg-12">
+                        <div id="plot1"></div>
+                    </div>
                 </div>
                 <div class="col-lg-3"></div>
                 <div class="col-lg-6">
@@ -228,11 +229,11 @@
                     </center>
                     <hr>
                     <div id="plot5"></div>
-                    <div class="col-lg-3"></div>
-                    <div class="col-lg-6">
-                        <img src="img/pie_chart.png" alt="Polarity Percentages" style="width:600px;height:400px;">
+                    <div class="col-lg-2"></div>
+                    <div class="col-lg-8">
+                        <img src="img/pie_chart.png" alt="Polarity Percentages" class="img-responsive center-block">
                     </div>
-                    <div class="col-lg-3"></div>
+                    <div class="col-lg-2"></div>
                 </div>
             </div>
         </div>
@@ -244,10 +245,11 @@
                         <strong>Most frequent locations</strong>
                     </h2>
                     <hr>
-                    <div class="col-lg-3"><img src="img/toplocations.png" style="margin-left: 60%"></div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-1"></div>
+                    <div class="col-lg-10">
+                        <img src="img/toplocations.png" class="img-responsive center-block">
                     </div>
-                    <div class="col-lg-3"></div>
+                    <div class="col-lg-1"></div>
                 </div>
             </div>
         </div>
@@ -259,11 +261,11 @@
                         <strong>Top 20 selected cities</strong>
                     </h2>
                     <hr>
-                    <div class="col-lg-3"><img src="img/top20cities.png" style="margin-left: 60%"></div>
-                    <div class="col-lg-6">
-                        
+                    <div class="col-lg-1"></div>
+                    <div class="col-lg-10">
+                        <img src="img/top20cities.png" class="img-responsive center-block">
                     </div>
-                    <div class="col-lg-3"></div>
+                    <div class="col-lg-1"></div>
                 </div>
             </div>
         </div>
@@ -275,11 +277,11 @@
                         <strong>Accuracies of experiments</strong>
                     </h2>
                     <hr>
-                    <div class="col-lg-3"><img src="img/accuracies.png" style="margin-left: 60%"></div>
-                    <div class="col-lg-6" >
-                        
+                    <div class="col-lg-1"></div>
+                    <div class="col-lg-10" >
+                        <img src="img/accuracies.png" class="img-responsive center-block">
                     </div>
-                    <div class="col-lg-3"></div>
+                    <div class="col-lg-1"></div>
                 </div>
             </div>
         </div>
@@ -310,6 +312,18 @@
     $('.carousel').carousel({
         interval: 5000 //changes the speed
     })
+    </script>
+
+    <script>
+        $(document).ready(function() {
+            setTimeout(function(){
+                var elements = document.getElementsByClassName('marks');
+                console.log("number of canvas element found:" + elements.length);
+                for (index = 0; index < elements.length; ++index) {
+                    elements[index].className += " img-responsive";
+                }
+            }, 1300);
+            });
     </script>
 
 </body>
