Allaksa titlous se ola ta pages

--- a/software/website/about.html
+++ b/software/website/about.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>About - Business Casual - Start Bootstrap Theme</title>
+    <title>About - Twitter topic detection and analysis</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -32,8 +32,8 @@
 
 <body>
 
-    <div class="brand">Business Casual</div>
-    <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+    <div class="brand">Twitter topic detection and analysis</div>
+    <div class="address-bar">liga logia</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
