added our emails in contact

--- a/software/website/contact.html
+++ b/software/website/contact.html
@@ -86,7 +86,9 @@
                 </div>
                 <div class="col-md-4">
                     <p>Email:
-                        <strong><a href="mailto:name@example.com">name@example.com</a></strong>
+                       <br><strong><a href="mailto:alextsil@csd.auth.gr">alextsil@csd.auth.gr</a></strong>
+                       <br><strong><a href="mailto:chripard@csd.auth.gr">chripard@csd.auth.gr</a></strong>
+                       <br><strong><a href="skarapost@csd.auth.gr">skarapost@csd.auth.gr</a></strong>
                     </p>
                     <p>Address:
                         <strong>Eth. Antistasis 16,
