Removed about us box. Fixed subtitle on all pages.

--- a/software/website/contact.html
+++ b/software/website/contact.html
@@ -33,7 +33,7 @@
 <body>
 
     <div class="brand">Twitter topic detection and analysis</div>
-    <div class="address-bar">liga logia</div>
+    <div class="address-bar">A demonstration tool for event detection, sentiment analysis and geoprediction</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
