--- a/software/website/index.html
+++ b/software/website/index.html
@@ -49,7 +49,7 @@
 <body>
 
     <div class="brand">Twitter topic detection and analysis</div>
-    <div class="address-bar">Perigrafi me 10lekseis tou ti kanoume</div>
+    <div class="address-bar">A demonstration tool for event detection, sentiment analysis and geoprediction</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -292,7 +292,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>csd.auth.gr</p>
+                    <p>www.csd.auth.gr</p>
                 </div>
             </div>
         </div>
