--- a/software/website/about.html
+++ b/software/website/about.html
@@ -33,7 +33,7 @@
 <body>
 
     <div class="brand">Twitter topic detection and analysis</div>
-    <div class="address-bar">liga logia</div>
+    <div class="address-bar">A demonstration tool for event detection, sentiment analysis and geoprediction</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -74,27 +74,6 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">About
-                        <strong>business casual</strong>
-                    </h2>
-                    <hr>
-                </div>
-                <div class="col-md-6">
-                    <img class="img-responsive img-border-left" src="img/slide-2.jpg" alt="">
-                </div>
-                <div class="col-md-6">
-                    <p>This is a great place to introduce your company or project and describe what you do.</p>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
                     <h2 class="intro-text text-center">The
                         <strong>Team</strong>
                     </h2>
@@ -125,7 +104,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>csd.auth.gr</p>
+                    <p>www.csd.auth.gr</p>
                 </div>
             </div>
         </div>
