--- a/software/website/about.html
+++ b/software/website/about.html
@@ -84,7 +84,7 @@
                     <h3>Alex Tsilingiris</h3>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="img/zoidberg.png" alt="">
+                    <img class="img-responsive" src="img/zoidberg2.png" alt="">
                     <h3>Christina Pardalidou</h3>
                 </div>
                 <div class="col-sm-4 text-center">
