--- a/software/website/index.html
+++ b/software/website/index.html
@@ -131,7 +131,7 @@
                         was "most alive", while combining user reputation metrics to select a tweet from a reputable source.
                     </p>
                     <p><span class="label label-default">Sentiment analysis:</span> An Opinion-Mining tool implemented for the needs of a previous course was used to predict the polarity of
-                    the tweets related to the emerging event. An SVM classifier was trained with 25k labeled movie reviews, from the publicly known labeled dataset of imdb, in order to predict 
+                    the tweets related to the emerging event. A SVM classifier was trained with 25k labeled movie reviews, from the publicly known labeled dataset of imdb, in order to predict 
                     the polarity of the unlabeled dataset of the collected tweets.</p>
                     <p><span class="label label-default">Geolocation:</span> For every city in our training corpus, we computed the frequency 
                      of its occurrences in user’s tweets and used this as the matching score of that user with that city. The city
