--- a/software/website/about.html
+++ b/software/website/about.html
@@ -88,10 +88,8 @@
                     <h3>Christina Pardalidou</h3>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
-                        <small>Job Title</small>
-                    </h3>
+                    <img class="img-responsive" src="img/howard.png" alt="">
+                    <h3>Sotiris Karapostolakis</h3>
                 </div>
                 <div class="clearfix"></div>
             </div>
